--- a/src/styles/_chatroom.scss
+++ b/src/styles/_chatroom.scss
@@ -11,12 +11,18 @@
 }
 
 .chatroom__body {
-  padding: 10px;
   height: 80vh;
-  margin: 10vh 0 10vh;
+
   overflow-y: scroll;
   display: flex;
   flex-direction: column;
+}
+
+.message {
+  &.sent {
+    color: $lavender;
+    align-self: flex-end;
+  }
 }
 
 .chatroom__footer {
