--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -6,12 +6,11 @@
   font-size: 1rem;
   width: 100%;
   max-width: 100%;
+  height: 50px;
 }
 
 %forms-focus {
-  outline: 0;
-  border: 1px solid lighten($lavender, 15%);
-  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+  outline: none;
 }
 
 #{$forms} {
