--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -27,8 +27,12 @@ button {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  width: min(90%, 500px);
+  width: min(90%, $container-max-width);
   margin-inline: auto;
+}
+
+.title-header {
+  font-weight: $title-size;
 }
 
 .btn {
