--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -16,7 +16,7 @@ $title-size: 700;
 // SIZE
 $container-max-width: 500px;
 $box-max-width: 1000px;
-
+$loginBtnSize: 200px;
 // Elements
 $buttons: (
   ".button, a.button, button, [type=submit], [type=reset], [type=button]"
