--- a/src/styles/_chatroom.scss
+++ b/src/styles/_chatroom.scss
@@ -5,7 +5,11 @@
   border: 3px solid black;
 
   &__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     width: 100%;
+    padding: 1rem;
     background-color: $lavender;
   }
 
