--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -87,9 +87,18 @@ i {
     align-items: center;
   }
   &__options {
+    position: absolute;
+    top: 2.75rem;
+    right: 0;
+    width: min(300px, 90vw);
+    background-color: $thistle;
     display: none;
     &.active {
       display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1rem;
+      padding: 1rem;
     }
   }
 }
